fix - divs overlapping

--- a/style.css
+++ b/style.css
@@ -100,7 +100,25 @@ nav ul li a:hover {
 .img-top {
   width: 60px;
   position: relative;
-  top: -65px;
+  top: -68px;
+  left: -30px;
+}
+.img-top2 {
+  width: 60px;
+  position: relative;
+  top: -57px;
+  left: -30px;
+}
+.img-top4 {
+  width: 50px;
+  position: relative;
+  top: -60px;
+  left: -24px;
+}
+.img-top5 {
+  width: 80px;
+  position: relative;
+  top: -45px;
   left: -30px;
 }
 .vertical-title {
@@ -116,4 +134,42 @@ nav ul li a:hover {
   font-size: 12px;
   color: grey;
 }
-
+.vertical-title1 {
+  position: relative;
+  top: 35px;
+  width: 140px;
+  font-size: 16px;
+}
+.vertical-desc1{
+  position: relative;
+  top: 47px;
+  width: 140px;
+  font-size: 12px;
+  color: grey;
+}
+.vertical-title4{
+  position: relative;
+  top: 30px;
+  width: 150px;
+  font-size: 16px;
+}
+.vertical-desc4{
+  position: relative;
+  top: 40px;
+  width: 140px;
+  font-size: 12px;
+  color: grey;
+}
+.vertical-title5 {
+  position: relative;
+  top: 50px;
+  width: 140px;
+  font-size: 16px;
+}
+.vertical-desc5 {
+  position: relative;
+  top: 55px;
+  width: 140px;
+  font-size: 12px;
+  color: grey;
+}
